--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 </head>
 <body>
+		<h1>Classic Arcade Game</h1>
+	  <!-- modal -->
+    <div id="modal">
+    	<!-- modal content -->
+    	<div class="modal-content">
+    		<div class="modal-header">
+    			<span class="close">&times;</span>
+    			<h2>You win!</h2>
+    		</div>
+    		<div class="modal-body">
+    			<button class="replay">Play Again!</button>
+    			<button class="exit">Exit</button>
+    		</div>
+    	</div>
+    </div>
+    <!-- end of modal -->
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+
+
 </body>
 </html>
